--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -334,7 +334,7 @@
         \setlength{\parskip}{1em}
 
         \begin{justify}
-            \textbf{\color{cond}Fin de la condition}.
+            \textbf{\color{cond}Fin de la condition « if »}.
         \end{justify}
         
         \setlength{\parskip}{1em}
@@ -360,14 +360,14 @@
 \end{itemize}
 
 \begin{justify}
-    \textbf{\color{cond}Fin de la condition}.
+    \textbf{\color{cond}Fin de la condition « if »}.
 \end{justify}
 
 \setlength{\parskip}{2em}
 
 
 \begin{justify}
-    Enfin, une fois l'une des deux boucles exécutée, \textbf{\color{cond}si} les paramètres \textbf{\color{vars}p\_lineColor} \textbf{\color{cond}OU} \textbf{\color{vars}p\_bgColor} contiennent une valeur, \textbf{\color{cond}alors} la fonction ré-encode la couleur d'affichage du texte \textbf{ET} celle de coloration du fond, selon la couleur par défaut du terminal. \textbf{\color{cond}Fin de la condition}.
+    Enfin, une fois l'une des deux boucles exécutée, \textbf{\color{cond}si} les paramètres \textbf{\color{vars}p\_lineColor} \textbf{\color{cond}OU} \textbf{\color{vars}p\_bgColor} contiennent une valeur, \textbf{\color{cond}alors} la fonction ré-encode la couleur d'affichage du texte \textbf{ET} celle de coloration du fond, selon la couleur par défaut du terminal. \textbf{\color{cond}Fin de la condition « if »}.
 \end{justify}\setlength{\parskip}{1em}
 
 \par\noindent\rule{\textwidth}{0.4pt}
@@ -509,7 +509,7 @@
                         \end{justify}\setlength{\parskip}{1em}
 
                         \begin{justify}
-                            \textbf{\color{cond}Fin de la condition}.
+                            \textbf{\color{cond}Fin de la condition « if »}.
                         \end{justify}
                     }
                 \end{itemize}
@@ -537,14 +537,14 @@
             \end{justify}
 
             \begin{justify}
-                \textbf{\color{cond}Fin de la condition}.
+                \textbf{\color{cond}Fin de la condition « if »}.
             \end{justify}
         }
     }
 \end{itemize}
 
 \begin{justify}
-    \textbf{\color{cond}Fin de la condition}.
+    \textbf{\color{cond}Fin de la condition « if »}.
 \end{justify}
 
 \setlength{\parskip}{2em}
