--- a/docs/fr/modules/main/functions/Status.tex
+++ b/docs/fr/modules/main/functions/Status.tex
@@ -333,7 +333,7 @@
             \end{justify}
 
             \begin{justify}
-                \textbf{\color{cond}Fin de la condition}.
+                \textbf{\color{cond}Fin de la condition « if »}.
             \end{justify}
         }
     \end{enumerate}
