Saving - Adding configuration documentation

--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -65,7 +65,7 @@
 \section{Présentation}\color{text}
 
 \color{sec2}
-\subsection{Présentation}\color{text}
+\subsection{Description}\color{text}
 
 \begin{justify}
     Ce fichier source inclut des fonctions servant à la création de headers, séparant ce qu'un développeur de scripts Bash peut imaginer comme étant deux grandes étapes différentes d'un script.
