--- a/docs/fr/modules/main/functions/Status.tex
+++ b/docs/fr/modules/main/functions/Status.tex
@@ -65,7 +65,7 @@
 \section{Présentation}\color{text}
 
 \color{sec2}
-\subsection{Présentation}\color{text}
+\subsection{Description}\color{text}
 
 \begin{justify}
     Ce fichier source inclut des fonctions servant à la gestion des valeurs des variables globales de statut : gestions d'erreurs et changement de valeur assité.
