--- a/docs/fr/modules/main/functions/Echo.tex
+++ b/docs/fr/modules/main/functions/Echo.tex
@@ -65,11 +65,12 @@
 \section{Présentation}\color{text}
 
 \color{sec2}
-\subsection{Présentation}\color{text}
+\subsection{Description}\color{text}
 
 \begin{justify}
     Ce fichier source inclut des fonctions servant au traitement du texte, comprenant entre autre l'affichage, les redirections vers le fichier de logs et / ou le terminal, ainsi que la vérification de la casse.
 \end{justify}
+
 
 % -----------------------
 
